<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feedy</string>
    <string name="categories">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="top_stories">Top Stories</string>
    <string name="world">World</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="education_and_family">Education and Family</string>
    <string name="science_and_environment">Science and Environment</string>
    <string name="technology">Technology</string>
    <string name="entertainment_and_arts">Entertainment and Arts</string>
    <string name="africa">Africa</string>
    <string name="england">England</string>
    <string name="europe">Europe</string>
    <string name="latin_america">Latin America</string>
    <string name="middle_east">Middle East</string>
    <string name="us_and_canada">US and Canada</string>
    <string name="title_activity_categories_preference">CategoriesPreference</string>

</resources>
